# mcdrag

./: .gitignore  CLAUDE.md  Cargo.toml  EMU8080_SETUP.md  LICENSE  README.md  basic.html  build_wasm.sh  cpm-emulator.html  cpm-local.html  cpm-real.html  cpm.html  index.html  serve.py
emulator/: EMU8080_SETUP.md  basic.html  cpm-emulator.html  cpm-local.html  cpm-real.html  cpm.html  mcdrag_simple.bas
src/: lib.rs  main.rs
