[package]
name = "mcdrag"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "MCDRAG - Drag coefficient estimation for axisymmetric projectiles"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["console"]